Project slider overflow fix

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -2,101 +2,68 @@
 	box-sizing: border-box;
 	font-family: 'Helvetica';
 	float: right;
-	width: 45%;
+	width: 50%;
 	height: 100%;
 	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
+	flex-direction: column;
 	margin-right: 35px;
 }
 .mySwiper {
-	height: 60%;
-	width: 80%;
+	height: 50%;
+	width: 100%;
 }
 .swiper-slide {
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	border-radius: 10px;
 	background-color: white;
+	box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+	filter: blur(2px);
+}
+.swiper-slide-next,
+.swiper-slide-prev {
+	opacity: 0.7;
 }
 .swiper-content {
+	width: 90%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 80%;
-	img {
-		width: 80%;
+	a {
+		text-decoration: none;
+		color: black;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		p {
+			width: 90%;
+			font-size: 14px;
+			font-family: sans-serif;
+			padding: 5px;
+		}
 	}
 }
-
-// #projects-container {
-// 	float: right;
-// 	width: 45%;
-// 	height: 100%;
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
-// 	margin-right: 20px;
-// }
-// #projects {
-// 	width: 100%;
-// 	height: 80%;
-// 	display: grid;
-// 	grid-template-columns: 1fr 1fr;
-// 	grid-template-rows: 1fr 1fr;
-// 	gap: 10%;
-// 	grid-template-areas:
-// 		'a b'
-// 		'c d';
-// }
-// .project-block {
-// 	display: flex;
-// 	justify-content: center;
-// 	overflow: hidden;
-// 	border: 2px solid #ffd700;
-// 	border-radius: 5px;
-// 	box-shadow: rgba(255, 215, 0, 0.6) 0px 1px 2px 0px, rgba(255, 215, 0, 0.3) 0px 2px 6px 2px;
-// 	transition: 0.2s;
-// 	&:hover {
-// 		filter: brightness(0.5);
-// 		// p {
-// 		// 	color: white;
-// 		// 	display: block;
-// 		// 	position: absolute;
-// 		// 	top: 50%;
-// 		// 	left: 50%;
-// 		// 	transform: translate(-50%, -50%);
-// 		// }
-// 	}
-// 	// p {
-// 	// 	display: none;
-// 	// }
-// }
-// .project-image {
-// 	width: auto;
-// 	height: 100%;
-// }
-// .stockbox-image {
-// 	width: auto;
-// 	height: 85%;
-// 	margin-top: 15px;
-// }
-// #punySwap {
-// 	grid-area: 'a';
-// 	background-color: white;
-// }
-// #stocksBox {
-// 	grid-area: 'b';
-// 	background-color: white;
-// }
-
-// #battleship {
-// 	grid-area: 'c';
-// }
-// #stayPut {
-// 	grid-area: 'd';
-// }
+#sbImg {
+	width: 80%;
+}
+#psImg {
+	width: 65%;
+}
+.webpageImg {
+	width: 100%;
+}
+.swiper-slide-active {
+	filter: blur(0px);
+}
+#projects-blurb {
+	color: #ffd700;
+	margin-top: 20px;
+	font-size: 20px;
+	font-family: 'Coolvetica';
+	font-weight: 0;
+}
